<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/light_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_7_10"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:radius="10dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/sample_question"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Options -->
    <RadioGroup
        android:id="@+id/options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_icon"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/option_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_icon"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/option_2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_icon"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/option_3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_icon"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/option_4"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <!-- Next Button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="sans-serif-black"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
