<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:padding="20dp">

    <!-- Circular Logo Container -->
    <FrameLayout
        android:id="@+id/logoContainer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_circle">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </FrameLayout>

    <!-- Enter Name Label -->

    <!-- Name Input Field -->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoContainer"
        android:layout_marginTop="45dp"
        android:text="@string/enter_your_name"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/nameLabel"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background"
        android:hint="@string/john_doe"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:padding="15dp"/>

    <!-- Start Button -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#F4C542"
        android:fontFamily="sans-serif-black"
        android:text="@string/start_quiz"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>
